--- a/index/index.html
+++ b/index/index.html
@@ -218,7 +218,7 @@ h1 {
 <h2 id="components">Parting Thoughts</h2>
 
 <h3>Keep experimenting</h3>
-<p>I encourage every one of you to continue to experiment using the tools at your disposal. Continue to make pages and put them online. Make a poster for an upcoming show. Edit your personal pages on github. The way to get better at HTML, CSS, and Javascript
+<p>I encourage every one of you to continue to experiment using the tools at your disposal. Continue to make pages and put them online. Make a poster for an upcoming show. Edit your personal pages on github. The way to get better at HTML, CSS, and Javascript is to keep playing with it.
 </p>
 
 <h3>Seek out answers</h3>
@@ -236,7 +236,7 @@ h1 {
 </p>
 <p><em>Employ concepts, processes, and production tools for interaction design.</em><br/>Hopefully, this class showed you some ways of thinking about interaction design, from creating rythm with type and scrolling, to creating navigation structures to help a user move through content, to creating unified visual systems that run throughout a work. My goal was to imagine a tool-agnostic approach to designing websites.</p>
 <p><em>Develop a process that adapts to new tools, best practices and mediums.</em><br/>This class was oriented around giving you the tools to quickly build and deploy typeset, interactive works onto the web, using a minimal amount of paid tools. Creating works in HTML and CSS directly lets you the designer circumvent a lot of expensive and complex systems and software, and get designed work in a public space quickly and with a minimal expenditure of resources. By focusing on designing in the medium itself, I hope I was able to emphasize that the web design tools like sketch, flinto, principal, keynote, photoshop, et. al. are abstractions; ways of defining how the final thing will look and move. Deliverables produced in these and future tools should be viewed as such. Don't get too invested in any one tool.</p>
-<p><em>Develop an understanding of interaction as an essential component of communication.</em><br/>Design involves not just setting type, but also imagining how a user is going to interact with the work. In print, these interactions could be the act of opening a brochure, or breaking a sticker that seals an envelope. The web is no different. You are able to set the rythm of the work by </p>
+<p><em>Develop an understanding of interaction as an essential component of communication.</em><br/>Design involves not just setting type, but also imagining how a user is going to interact with the work. In print, these interactions could be the act of opening a brochure, or breaking a sticker that seals an envelope. The web is no different.</p>
 
         </div>
 
