--- a/index.htm
+++ b/index.htm
@@ -81,7 +81,7 @@
             <div class="projectlink-block">
               <a class="projectlink" target="_blank" href="https://nclaure.github.io/projectTM/">a.1 Imagine</a>
               <a class="projectlink" target="_blank" href="https://nclaure.github.io/day3TM/">a.2 Tuesday</a>
-              <a class="projectlink" target="_blank">a.3 tba</a>
+              <a class="projectlink" target="_blank" href="https://nclaure.github.io/finalprojjjj/">a.3 Villian</a>
             </div>
           </li>
           <li>
