--- a/index.htm
+++ b/index.htm
@@ -124,7 +124,7 @@
               <a class="projectlink" target="_blank">a.3 tba</a>
             </div>
           </li>
-          <li>
+          <li style="background-image:url(img/duck.png);background-size:300%">
             <div class="card-animation"><span class="f-init">S</span>
             <span class="l-init">K</span></div>
             <a class="namelink"  target="_blank" href="http://Skang04.github.io">Samuel Kang</a>
@@ -134,7 +134,7 @@
             <div class="projectlink-block">
               <a class="projectlink" target="_blank" href="https://skang04.github.io/lyric-website/">a.1 New Rules</a>
               <a class="projectlink" target="_blank" href="https://skang04.github.io/day_in_life/">a.2 Wednesday</a>
-              <a class="projectlink" target="_blank">a.3 tba</a>
+              <a class="projectlink" target="_blank" href="https://skang04.github.io/final/home">a.3 Red And The Ducks</a>
             </div>
           </li>
           <li>
