--- a/index.htm
+++ b/index.htm
@@ -71,7 +71,7 @@
               <a class="projectlink" target="_blank">a.3 tba</a>
             </div>
           </li>
-          <li>
+          <li style="background-image:url(img/nick3.jpg); background-size:Cover;">
             <div class="card-animation"><span class="f-init">N</span>
             <span class="l-init">C</span></div>
             <a class="namelink"  target="_blank" href="http://nclaure.github.io">Nicholas Claure</a>
