--- a/index.htm
+++ b/index.htm
@@ -84,17 +84,17 @@
               <a class="projectlink" target="_blank">a.3 tba</a>
             </div>
           </li>
-          <li>
+          <li style="background: url('../img/noahmfisher.png'); background-size: cover;">
             <div class="card-animation"><span class="f-init">N</span>
             <span class="l-init">F</span></div>
-            <a class="namelink"  target="_blank" href="http://noahmfisher.github.io">Noah Fisher</a>
+            <a style="color:#a2f1c1;" class="namelink" target="_blank" href="http://noahmfisher.github.io">Noah Fisher</a>
             <div class="sociallink-block">
-              <a class="sociallink"  target="_blank" href="https://github.com/noahmfisher">Github</a> <a class="sociallink"  href="https://codepen.io/noahmfisher">Codepen</a>
+              <a class="sociallink"  style="color:#a2f1c1;"target="_blank" href="https://github.com/noahmfisher">Github</a> <a class="sociallink"  href="https://codepen.io/noahmfisher">Codepen</a>
             </div>
             <div class="projectlink-block">
-              <a class="projectlink" target="_blank" href="https://noahmfisher.github.io/METAL-FACE-DOOM/">a.1 Metal Face</a>
-              <a class="projectlink" target="_blank" href="https://noahmfisher.github.io/daily/">a.2 Saturday</a>
-              <a class="projectlink" target="_blank">a.3 tba</a>
+              <a class="projectlink" style="color:#a2f1c1;"target="_blank" href="https://noahmfisher.github.io/METAL-FACE-DOOM/">a.1 Metal Face</a>
+              <a class="projectlink" style="color:#a2f1c1;"target="_blank" href="https://noahmfisher.github.io/daily/">a.2 Saturday</a>
+              <a class="projectlink" style="color:#a2f1c1;"target="_blank" href="https://noahmfisher.github.io/final/">a.3 Cubic on XP</a>
             </div>
           </li>
           <li>
