--- a/index.htm
+++ b/index.htm
@@ -179,7 +179,7 @@
               <a class="projectlink" target="_blank">a.3 tba</a>
             </div>
           </li>
-          <li>
+          <li style="background-image: url(img/awhitaker.jpg); background-size: contain;">
             <div class="card-animation"><span class="f-init">A</span>
             <span class="l-init">W</span></div>
             <a class="namelink"  target="_blank" href="http://grwhit20.github.io">August Whitaker</a>
@@ -190,7 +190,7 @@
             <div class="projectlink-block">
               <a class="projectlink" target="_blank" href="https://grwhit20.github.io/jalo-wiki/">a.1 Jalo</a>
               <a class="projectlink" target="_blank" href="https://grwhit20.github.io/MY-DAY/">a.2 Monday</a>
-              <a class="projectlink" target="_blank">a.3 tba</a>
+              <a class="projectlink" target="_blank" href="https://grwhit20.github.io/LANDPHILL/">a.3 Landphill</a>
             </div>
           </li>
           <li>
