--- a/index.htm
+++ b/index.htm
@@ -110,7 +110,7 @@
               <a class="projectlink" target="_blank">a.3 tba</a>
             </div>
           </li>
-          <li>
+          <li style="background-image:url(img/knifelogo.png);background-size:cover">
             <div class="card-animation"><span class="f-init">S</span>
             <span class="l-init">J</span></div>
             <a class="namelink"  target="_blank" href="http://sydneyjohnson.github.io">Sydney Johnson</a>
@@ -121,7 +121,7 @@
             <div class="projectlink-block">
               <a class="projectlink" target="_blank" href="https://sydneyjohnson.github.io/Demoweek2/index(p2).html">a.1 Brains</a>
               <a class="projectlink" target="_blank" href="https://github.com/sydneyjohnson/project2/blob/master/blog/index.html">a.2 Saturday</a>
-              <a class="projectlink" target="_blank">a.3 tba</a>
+              <a class="projectlink" target="_blank" href="https://sydneyjohnson.github.io/project-3/facebook.html">a.3 </a>
             </div>
           </li>
           <li>
