--- a/index.htm
+++ b/index.htm
@@ -137,7 +137,7 @@
               <a class="projectlink" target="_blank">a.3 tba</a>
             </div>
           </li>
-          <li>
+          <li style="background-image:url(img/kmcartney.jpg);background-size:cover">
             <div class="card-animation"><span class="f-init">K</span>
             <span class="l-init">M</span></div>
             <a class="namelink"  target="_blank" href="http://kmcartney.github.io">Kiley McArtney</a>
@@ -148,7 +148,7 @@
             <div class="projectlink-block">
               <a class="projectlink" target="_blank" href="https://kmcartney.github.io/Assignment1/">a.1 Fairy Feller</a>
               <a class="projectlink" target="_blank" href="https://kmcartney.github.io/Assignment2/">a.2 Tuesday</a>
-              <a class="projectlink" target="_blank">a.3 tba</a>
+              <a class="projectlink" target="_blank" href="http://kmcartney.github.io/Assignment-Three/">a.3 Angler</a>
             </div>
           </li>
           <li>
