--- a/index.htm
+++ b/index.htm
@@ -97,7 +97,7 @@
               <a class="projectlink" target="_blank">a.3 tba</a>
             </div>
           </li>
-          <li>
+          <li style="background-image:url(img/laurenimg.png)">
             <div class="card-animation"><span class="f-init">L</span>
             <span class="l-init">J</span></div>
             <a class="namelink"  target="_blank" href="http://ljackson01.github.io">Lauren Jackson</a>
@@ -107,7 +107,7 @@
             <div class="projectlink-block">
               <a class="projectlink" target="_blank" href="https://ljackson01.github.io/cold-little-heart/">a.1 Cold Little Heart</a>
               <a class="projectlink" target="_blank" href="https://ljackson01.github.io/day-in-the-life/">a.2 Wednesday</a>
-              <a class="projectlink" target="_blank">a.3 tba</a>
+              <a class="projectlink" target="_blank" href="https://ljackson01.github.io/superhero-jay-hue/">a.3 Superhero, Jay Hue</a>
             </div>
           </li>
           <li>
