--- a/index.htm
+++ b/index.htm
@@ -193,7 +193,7 @@
               <a class="projectlink" target="_blank">a.3 tba</a>
             </div>
           </li>
-          <li>
+          <li style="background-image:url(img/pokeball.svg);background-size: 160%;">
             <div class="card-animation"><span class="f-init">B</span>
             <span class="l-init">C</span></div>
             <a class="namelink"  target="_blank" href="http://Bclarendon.github.io">Bryan Clarendon</a>
@@ -204,7 +204,7 @@
             <div class="projectlink-block">
               <a class="projectlink" target="_blank" href="https://bclarendon.github.io/project1-songscroll/">a.1 Feel It Still</a>
               <a class="projectlink" target="_blank" href="https://bclarendon.github.io/day-in-the-life/">a.2 Wednesday</a>
-              <a class="projectlink" target="_blank">a.3 tba</a>
+              <a class="projectlink" target="_blank" href="https://bclarendon.github.io/">a.3 Personal Site</a>
             </div>
           </li>
           <li>
