--- a/index.htm
+++ b/index.htm
@@ -165,7 +165,7 @@
               <a class="projectlink" target="_blank">a.3 tba</a>
             </div>
           </li>
-          <li>
+          <li style="background-image:url(img/jscaraville.png);background-size:cover;" >
             <div class="card-animation"><span class="f-init">J</span>
             <span class="l-init">S</span></div>
             <a class="namelink"  target="_blank" href="http://jscaraville.github.io">Jenn Scaraville</a>
@@ -176,7 +176,7 @@
             <div class="projectlink-block">
               <a class="projectlink" target="_blank" href="https://jscaraville.github.io/lyricalmapping/">a.1 Fireworks</a>
               <a class="projectlink" target="_blank" href="https://jscaraville.github.io/day-in-the-life/index.html">a.2 Tuesday</a>
-              <a class="projectlink" target="_blank">a.3 tba</a>
+              <a class="projectlink" target="_blank" href="https://jscaraville.github.io/hero/index.html"> a.3 Willow</a>
             </div>
           </li>
           <li>
