--- a/index.htm
+++ b/index.htm
@@ -207,7 +207,7 @@
               <a class="projectlink" target="_blank">a.3 tba</a>
             </div>
           </li>
-          <li>
+          <li style="background-image:url(img/peijung.png);background-repeat: no-repeat;background-position:top;background-size: cover;">
             <div class="card-animation"><span class="f-init">P</span>
             <span class="l-init">H</span></div>
             <a class="namelink"  target="_blank" href="http://pho01.github.io">Pei Jung Ho</a>
@@ -218,7 +218,7 @@
             <div class="projectlink-block">
               <a class="projectlink" target="_blank" href="https://pho01.github.io/GD2-project1/">a.1 Nothing Else</a>
               <a class="projectlink" target="_blank" href="https://pho01.github.io/some-days/peiday.html">a.2 Thursday</a>
-              <a class="projectlink" target="_blank">a.3 tba</a>
+              <a class="projectlink" target="_blank" href="https://pho01.github.io/superhero_Mr.Dream/homepage.html">a.3 Mr.Dream</a>
             </div>
           </li>
           <li>
