--- a/index.htm
+++ b/index.htm
@@ -207,7 +207,7 @@
               <a class="projectlink" target="_blank">a.3 tba</a>
             </div>
           </li>
-          <li style="background-image:url(img/peijung.png);background-repeat: no-repeat;background-position:top;background-size: cover;">
+          <li style="background-image:url(img/peijung.png);background-repeat: no-repeat;background-position:top;">
             <div class="card-animation"><span class="f-init">P</span>
             <span class="l-init">H</span></div>
             <a class="namelink"  target="_blank" href="http://pho01.github.io">Pei Jung Ho</a>
