--- a/index.htm
+++ b/index.htm
@@ -68,7 +68,7 @@
             <div class="projectlink-block">
               <a class="projectlink" target="_blank" href="https://shbugrais.github.io/lavieenrose/">a.1 La Vie en Rose</a>
               <a class="projectlink" target="_blank" href="https://shbugrais.github.io/html/awitl.html">a.2 Weekend</a>
-              <a class="projectlink" target="_blank">a.3 tba</a>
+              <a class="projectlink" target="_blank" href="https://shbugrais.github.io/aysha/hero.html">a.3 Aysha</a>
             </div>
           </li>
           <li style="background-image:url(img/nick3.jpg); background-size:Cover;">
@@ -84,20 +84,20 @@
               <a class="projectlink" target="_blank" href="https://nclaure.github.io/finalprojjjj/">a.3 Villian</a>
             </div>
           </li>
-          <li style="background: url('../img/noahmfisher.png'); background-size: cover;">
+          <li style="background-image: url('img/noahmfisher.png'); background-size: cover;">
             <div class="card-animation"><span class="f-init">N</span>
             <span class="l-init">F</span></div>
-            <a style="color:#a2f1c1;" class="namelink" target="_blank" href="http://noahmfisher.github.io">Noah Fisher</a>
+            <a class="namelink" target="_blank" href="http://noahmfisher.github.io">Noah Fisher</a>
             <div class="sociallink-block">
-              <a class="sociallink"  style="color:#a2f1c1;"target="_blank" href="https://github.com/noahmfisher">Github</a> <a class="sociallink"  href="https://codepen.io/noahmfisher">Codepen</a>
+              <a class="sociallink" target="_blank" href="https://github.com/noahmfisher">Github</a> <a class="sociallink"  href="https://codepen.io/noahmfisher">Codepen</a>
             </div>
             <div class="projectlink-block">
-              <a class="projectlink" style="color:#a2f1c1;"target="_blank" href="https://noahmfisher.github.io/METAL-FACE-DOOM/">a.1 Metal Face</a>
-              <a class="projectlink" style="color:#a2f1c1;"target="_blank" href="https://noahmfisher.github.io/daily/">a.2 Saturday</a>
-              <a class="projectlink" style="color:#a2f1c1;"target="_blank" href="https://noahmfisher.github.io/final/">a.3 Cubic on XP</a>
+              <a class="projectlink" target="_blank" href="https://noahmfisher.github.io/METAL-FACE-DOOM/">a.1 Metal Face</a>
+              <a class="projectlink" target="_blank" href="https://noahmfisher.github.io/daily/">a.2 Saturday</a>
+              <a class="projectlink" target="_blank" href="https://noahmfisher.github.io/final/">a.3 Cubic on XP</a>
             </div>
           </li>
-          <li>
+          <li style="background-image:url(img/laurenimg.png)">
             <div class="card-animation"><span class="f-init">L</span>
             <span class="l-init">J</span></div>
             <a class="namelink"  target="_blank" href="http://ljackson01.github.io">Lauren Jackson</a>
@@ -107,10 +107,10 @@
             <div class="projectlink-block">
               <a class="projectlink" target="_blank" href="https://ljackson01.github.io/cold-little-heart/">a.1 Cold Little Heart</a>
               <a class="projectlink" target="_blank" href="https://ljackson01.github.io/day-in-the-life/">a.2 Wednesday</a>
-              <a class="projectlink" target="_blank">a.3 tba</a>
+               <a class="projectlink" target="_blank" href="https://ljackson01.github.io/superhero-jay-hue/">a.3 Superhero, Jay Hue</a>
             </div>
           </li>
-          <li style="background-image:url(img/knifelogo.png);background-size:cover">
+          <li style="background-image:url(img/knifelogo.png);background-size:20%;">
             <div class="card-animation"><span class="f-init">S</span>
             <span class="l-init">J</span></div>
             <a class="namelink"  target="_blank" href="http://sydneyjohnson.github.io">Sydney Johnson</a>
@@ -124,7 +124,7 @@
               <a class="projectlink" target="_blank" href="https://sydneyjohnson.github.io/project-3/facebook.html">a.3 </a>
             </div>
           </li>
-          <li>
+          <li style="background-image:url(img/duck.png);background-size:300%">
             <div class="card-animation"><span class="f-init">S</span>
             <span class="l-init">K</span></div>
             <a class="namelink"  target="_blank" href="http://Skang04.github.io">Samuel Kang</a>
@@ -134,10 +134,10 @@
             <div class="projectlink-block">
               <a class="projectlink" target="_blank" href="https://skang04.github.io/lyric-website/">a.1 New Rules</a>
               <a class="projectlink" target="_blank" href="https://skang04.github.io/day_in_life/">a.2 Wednesday</a>
-              <a class="projectlink" target="_blank">a.3 tba</a>
+               <a class="projectlink" target="_blank" href="https://skang04.github.io/final/home">a.3 Red And The Ducks</a>
             </div>
           </li>
-          <li>
+          <li style="background-image:url(img/kmcartney.jpg);background-size:cover">
             <div class="card-animation"><span class="f-init">K</span>
             <span class="l-init">M</span></div>
             <a class="namelink"  target="_blank" href="http://kmcartney.github.io">Kiley McArtney</a>
@@ -148,7 +148,7 @@
             <div class="projectlink-block">
               <a class="projectlink" target="_blank" href="https://kmcartney.github.io/Assignment1/">a.1 Fairy Feller</a>
               <a class="projectlink" target="_blank" href="https://kmcartney.github.io/Assignment2/">a.2 Tuesday</a>
-              <a class="projectlink" target="_blank">a.3 tba</a>
+              <a class="projectlink" target="_blank" href="http://kmcartney.github.io/Assignment-Three/">a.3 Angler</a>
             </div>
           </li>
           <li style="background-image:url(img/meyers-bg.jpg)">
@@ -193,7 +193,7 @@
               <a class="projectlink" target="_blank" href="https://grwhit20.github.io/LANDPHILL/">a.3 Landphill</a>
             </div>
           </li>
-          <li>
+          <li style="background-image:url(img/pokeball.svg);background-size: 160%;">
             <div class="card-animation"><span class="f-init">B</span>
             <span class="l-init">C</span></div>
             <a class="namelink"  target="_blank" href="http://Bclarendon.github.io">Bryan Clarendon</a>
@@ -207,7 +207,7 @@
               <a class="projectlink" target="_blank">a.3 tba</a>
             </div>
           </li>
-          <li>
+          <li style="background-image:url(img/peijung.png);background-repeat: no-repeat;background-position:top;">
             <div class="card-animation"><span class="f-init">P</span>
             <span class="l-init">H</span></div>
             <a class="namelink"  target="_blank" href="http://pho01.github.io">Pei Jung Ho</a>
@@ -218,7 +218,7 @@
             <div class="projectlink-block">
               <a class="projectlink" target="_blank" href="https://pho01.github.io/GD2-project1/">a.1 Nothing Else</a>
               <a class="projectlink" target="_blank" href="https://pho01.github.io/some-days/peiday.html">a.2 Thursday</a>
-              <a class="projectlink" target="_blank">a.3 tba</a>
+              <a class="projectlink" target="_blank" href="https://pho01.github.io/superhero_Mr.Dream/homepage.html">a.3 Dr.Dream</a>
             </div>
           </li>
           <li>
